--- a/overrides/main.html
+++ b/overrides/main.html
@@ -2,4 +2,6 @@
 
 {% block extrahead %}
 <meta name="google-site-verification" content="BPI8oHQsUYTXWtWsPgfCGH1I0BdJ13D2M-eJfBxQs8o"/>
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
 {% endblock %}
