--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,7 +12,9 @@
 {% block scripts %}
 {{ super() }}
 <script>
-    if ("serviceWorker" in navigator) {
+    if ("serviceWorker" in navigator
+        && window.location.hostname !== "localhost"
+        && window.location.hostname !== "127.0.0.1") {
         window.addEventListener("load", () => {
             navigator.serviceWorker.register("/sw.js");
         });
