--- a/5g/service/engine/index.html
+++ b/5g/service/engine/index.html
@@ -1146,7 +1146,9 @@
       
     
 <script>
-    if ("serviceWorker" in navigator) {
+    if ("serviceWorker" in navigator
+        && window.location.hostname !== "localhost"
+        && window.location.hostname !== "127.0.0.1") {
         window.addEventListener("load", () => {
             navigator.serviceWorker.register("/sw.js");
         });
