--- a/multimedia/index.html
+++ b/multimedia/index.html
@@ -899,7 +899,9 @@
       
     
 <script>
-    if ("serviceWorker" in navigator) {
+    if ("serviceWorker" in navigator
+        && window.location.hostname !== "localhost"
+        && window.location.hostname !== "127.0.0.1") {
         window.addEventListener("load", () => {
             navigator.serviceWorker.register("/sw.js");
         });
